@@ -1,3 +1,11 @@
+2018-04-20  Oliver Lemke  <olemke@core-dump.info>
+
+	* arts-2-3-1033
+
+	* src/m_hitran_xsec.cc (abs_xsec_per_speciesAddHitranXsec):
+
+	Take into account recent Jacobian changes.
+
 2018-04-20  Patrick Eriksson  <patrick.eriksson@chalmers.se>
 
 	* arts-2-3-1032
